<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme"
    tools:context=".HomepageActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_evidence"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/evidence"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_branch"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_branch"
            android:layout_width="219dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/branch"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_noio" />

        <EditText
            android:id="@+id/textbox_branch"
            android:layout_width="290dp"
            android:layout_height="41dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="12dp"
            android:ems="10"
            android:hint="Eg. PS DLF PH-2"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/text_noio"
            app:layout_constraintTop_toBottomOf="@+id/text_noio" />

        <EditText
            android:id="@+id/textbox_doi"
            android:layout_width="178dp"
            android:layout_height="41dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="12dp"
            android:ems="10"
            android:hint="Eg. 10/4/2019"
            android:inputType="date"
            android:singleLine="true"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/text_doi2"
            app:layout_constraintTop_toBottomOf="@+id/text_category" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="412dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/text_case_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/case_no"
            android:textColor="@android:color/background_light"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.032"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <EditText
            android:id="@+id/textbox_caseno"
            android:layout_width="237dp"
            android:layout_height="91dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Eg. 74245"
            android:inputType="number"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/text_case_no"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.49" />

        <TextView
            android:id="@+id/text_category"
            android:layout_width="155dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/category"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_noio"
            android:layout_width="219dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/name_of_io"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_doi2" />

        <EditText
            android:id="@+id/textbox_noio"
            android:layout_width="253dp"
            android:layout_height="41dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="12dp"
            android:ems="10"
            android:hint="Eg. Jaswinder Pratap Singh"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/text_noio"
            app:layout_constraintTop_toBottomOf="@+id/text_doi2" />

        <TextView
            android:id="@+id/text_doi2"
            android:layout_width="219dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/date_incident"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_category" />

        <EditText
            android:id="@+id/textbox_category"
            android:layout_width="264dp"
            android:layout_height="41dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="Eg. Murder, Rape, etc"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/text_category"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/nav_submit_case"
            android:layout_width="297dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:fontFamily="sans-serif"
            android:text="@string/submit_case"
            android:textColor="@android:color/background_light"
            android:textSize="32sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.986" />

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="395dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/nav_submit_case"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_evidence">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>